<resources>
    <string name="app_name">App-rendamos</string>
    <string name="registrar">Registrar</string>
    <string name="next">Siguiente</string>

    <!-- Seccion de strings para registro de centros infantiles/!-->


    <!-- Strings para registro de usuarios /-->
    <string name="registroUsuariosLabel">Registro de nuevo usuario</string>
    <string name="email">E-mail</string>
    <string name="DNI">Numero de identificacion</string>
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="tel">Telefono</string>
    <string name="mobile">Celular</string>
    <string name="gender">Genero</string>
    <string name="localizacion">ID localizacion</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Clave</string>
    <string name="superuser">Súper usuario</string>
    <string name="admin">Administrador</string>
    <string name="user">Usuario</string>

    <!-- Seccion de strings para registro de estudiantes/!-->
    <string name="registroEstudiantesLabel">Registro de estudiante</string>
    <string name="earlyBirthAmount">earlyBirthAmount</string>
    <string name = "sponsorID">ID del patrocinador</string>
    <string name = "classroomID">ID de la clase</string>

</resources>
