<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/registroUsuariosLabel"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:paddingBottom="30dp"
            android:paddingTop="20dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="0dp"
            android:text="@string/firstName"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline" />

        <EditText
            android:id="@+id/nombreET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="0dp"
            android:text="@string/lastName"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            />

        <EditText
            android:id="@+id/apellidoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="0dp"
            android:text="@string/DNI"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            />

        <EditText
            android:id="@+id/dniET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="0dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="0dp"
            android:text="@string/mobile"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            />

        <EditText
            android:id="@+id/celularET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="0dp"
            android:text="@string/tel"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            />

        <EditText
            android:id="@+id/telefonoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="0dp"
            android:text="@string/gender"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            />

        <EditText
            android:id="@+id/generoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="0dp"
            android:text="@string/localizacion"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            />

        <EditText
            android:id="@+id/localizacionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="0dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            />

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="0dp"
            android:text="@string/password"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textAlignment="center"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"
            >
        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/admin"
            android:layout_gravity="center"/>
        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/superuser"
            android:layout_gravity="center"/>
        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/user"
            android:layout_gravity="center"/>
        </RadioGroup>

        <Button
            android:id="@+id/registrarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="#000000"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/registrar"
            android:textColor="#FFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


